🛠️ Updae - aggregated database, init conf

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "localRonald": "Server=DESKTOP-V42GFDR\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "localCarlos": "Server=<HOST>\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
