--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "localRonald": "Server=DESKTOP-V42GFDR\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True",
-    "localCarlos": "Server=<HOST>\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "LocalConnection": "Server=DESKTOP-V42GFDR\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "Local2Connection": "Server=<HOST>\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
