--- a/backend/appsettings.Production.json
+++ b/backend/appsettings.Production.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Server=DESKTOP-V42GFDR\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "Connection": "Data Source=agendappDb.mssql.somee.com; Initial Catalog=agendappDb; user id=backDevNC_SQLLogin_1; pwd=xzcuvdo5lo; TrustServerCertificate=True"
   }
 }
