--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalConnection": "Server=DESKTOP-V42GFDR\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True",
-    "Local2Connection": "Server=<HOST>\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "Connection": "Server=DESKTOP-V42GFDR\\SQLEXPRESS;DataBase=agendappDb;Trusted_Connection=True;TrustServerCertificate=True",
   }
 }
