--- a/frontend/agendapp/package.json
+++ b/frontend/agendapp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.3.0",
     "json-server": "^1.0.0-beta.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.12.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
