--- a/frontend/agendapp/tsconfig.app.json
+++ b/frontend/agendapp/tsconfig.app.json
@@ -2,6 +2,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     "outDir": "./out-tsc/app",
     "types": []
   },
