--- a/frontend/agendapp/package.json
+++ b/frontend/agendapp/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "json-server": "^1.0.0-beta.1",
