eliminé archivos en desuso, limpie los imports de cada componente, añadí nuevos pipe, error component, y modales.

--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,7 @@
         "list": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
